@@ -6,7 +6,6 @@ HIGH PRIORITY
 
 MEDIUM PRIORITY
 - product image histogram with 3+3+3=1 Sandwich is problematic, image extends below box, hard to stack to maintain histogram look
-- javadoc
 
 LOW PRIORITY
 - scale image files to desired size
