@@ -1,3 +1,4 @@
+11/5/09 javadoc existing code
 11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerSliderNode, unused (chose spinners instead of sliders)
 11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerTextFieldNode, unused
 # 0.00.10 (36379) Nov 5, 2009
